--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITBA Web site</title>
+    <link rel="stylesheet" href="style.css"/> <!-- relacionamos link con styleheet --> 
 </head>
 <body>
-    <h1> ITBANK</h1>
-    <h2>Welcome to ITBANK</h2>
-    <h3> Deje sus datos y los comunicar</h3>
+    <h1 id="titulo"> ITBANK</h1> 
+    <br>
+    <p class="especial"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem magni atque iusto unde debitis temporibus tenetur nam quod architecto omnis! Iusto quia repudiandae minus aliquid quisquam unde eveniet officia aperiam?</p>
+    <div> <!-- divicion logica en bloques -->
+
+        <p class="texto especial"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem magni atque iusto unde debitis temporibus tenetur nam quod architecto omnis! Iusto quia repudiandae minus aliquid quisquam unde eveniet officia aperiam?</p>
+        <h2 id="Bienvenida">Welcome to ITBANK</h2>
+        <h3> Deje sus datos y los comunicar</h3>
+        
+    </div>
+    <h4> by: falco luciano</h4>
 </body>
 </html>
